Update .env.example for PostgreSQL and trust proxy settings

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 PORT=3000
 JWT_SECRET=your_secure_jwt_secret_key
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/andikar
-# For MongoDB Atlas connection
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/andikar?retryWrites=true&w=majority
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/andikar
+# For Railway/Heroku PostgreSQL
+# DATABASE_URL will be provided by the platform
 
 # Admin API
 ADMIN_API_URL=http://localhost:3001
@@ -17,6 +17,9 @@ HUMANIZER_API_KEY=your_api_key_here
 
 # External API Usage Flag
 USE_EXTERNAL_API=false
+
+# Trust Proxy - set to true when behind a reverse proxy (like Railway)
+TRUST_PROXY=true
 
 # Rate Limiting (optional, defaults in config.js)
 # RATE_LIMIT_WINDOW_MS=900000
