Update .env.example with Railway PostgreSQL variables

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,17 @@
 PORT=3000
 JWT_SECRET=your_secure_jwt_secret_key
 
-# Database Configuration (PostgreSQL)
+# PostgreSQL Database Configuration
+# Railway automatically sets these in production, this is for local development
+# You can use the full connection string 
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/andikar
-# For Railway/Heroku PostgreSQL
-# DATABASE_URL will be provided by the platform
+
+# Or use individual parameters
+PGHOST=localhost
+PGUSER=postgres
+PGPASSWORD=postgres
+PGDATABASE=andikar
+PGPORT=5432
 
 # Admin API
 ADMIN_API_URL=http://localhost:3001
